# SimpleFactoryProject

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
tests/: CMakeLists.txt  test.cpp
